# Snippet-Vault

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Jenkinsfile  README.md  TAURI_BUILD.md  docker-compose.yml  fixplan.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts
.github/workflows/: docker-image.yml  release.yml
app/api/health/: route.ts
app/api/snippets/: route.ts
app/api/snippets/[id]/: route.ts
app/api/snippets/[id]/copy/: route.ts
app/api/snippets/restore/: route.ts
components/: code-block.tsx  db-setup-dialog.tsx  header.tsx  highlight-theme.tsx  search-bar.tsx  settings-dialog.tsx  snippet-card.tsx  snippet-detail.tsx  snippet-form.tsx  snippets-dashboard.tsx  update-banner.tsx
docs/: self-hosting.md
lib/: db.ts  prompt-stats.ts  tauri-api.ts  updater.ts
scripts/: 001-create-snippets-table.sql  002-add-tags-column.sql  build-tauri.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  validation.rs
